# metacausal

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  conf.py  index.md
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
metacausal/: __init__.py  _formatting.py  _parallel.py  _warnings.py  defaults.py  ensemble.py  estimators.py  outcome_type.py
metacausal/adapters/: __init__.py  base.py  causalml.py  doubleml.py  econml.py  generic.py  stochtree.py
metacausal/aggregation/: __init__.py  base.py  causal_stacking.py  cba.py  nuisance.py  pointwise.py  q_aggregation.py  r_stacking.py  select.py  splitting.py  weights.py
metacausal/datasets/: __init__.py
metacausal/plots/: __init__.py  _base.py  cate_profile.py  disagreement.py  forest.py  weights.py
tests/: conftest.py  test_causal_stacking_q_agg.py  test_causalml_adapter.py  test_cba.py  test_datasets.py  test_defaults.py  test_doubleml_adapter.py  test_econml_adapter.py  test_ensemble.py  test_generic_adapters.py  test_injectable_hooks.py  test_integration.py  test_nuisance.py  test_nuisance_binary.py  test_outcome_type.py  test_outcome_type_lifecycle.py  test_outcome_type_routing.py  test_parallel.py  test_plots.py  test_r_stacking.py  test_result_summaries.py  test_select.py  test_splitting.py  test_stochtree_adapter.py  test_strategy_abc.py  test_strategy_override.py  test_subsample_bootstrap.py  test_supervised_bootstrap.py  test_supervised_fit.py  test_trimmed_mean.py  test_warnings.py
